# rscpp_usd_test

./: CMakeLists.txt  cmake_project.bat
src/: main.cpp
